pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-auth-tls-secret-name-collision.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-tls-secret-name-collision-dash
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/my-secret"

spec:
  ingressClassName: nginx
  rules:
    - host: tls-option-name-collision-dash.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-auth-tls-secret-name-collision-dot
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/my.secret"

spec:
  ingressClassName: nginx
  rules:
    - host: tls-option-name-collision-dot.localhost
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
